fixes layout issues in the project manager people tab, re #2581

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -9318,6 +9318,10 @@ a.search-facet-item.disabled {
     margin-left:0;
 }
 
+.mobile-project-manager-editor .tab-content {
+    padding:1px;
+}
+
 .identities-list .mpm-left-panel .user .project-status {
     top: 33px;
 }
@@ -9334,6 +9338,10 @@ a.search-facet-item.disabled {
     width: calc(100% - 250px);
     height: 550px;
     padding: 10px;
+}
+
+.mpm-right-panel .list-group.user-cards {
+    padding-right: 35px;
 }
 
 .mpm-account-detail-panel {
